# pjatkbot

./: Cargo.toml  Justfile  data.txt  db_classes.txt  diesel.toml  new_classes.txt
locales/: mainmenu.yml  notifications.yml  onboarding.yml
migrations/2024-12-01-131412_create_users/: up.sql
src/: bot.rs  db.rs  main.rs  notifications.rs  parsers.rs  parsing.rs  schema.rs
src/bot/: user_onboard_dialog.rs  user_path.rs  utils.rs
src/bot/gui/: user_onboard_dialog.rs
src/bot/user_path/: user_onboard_dialog.rs
src/notifications/: manager.rs
src/parsers/: pjatk.rs
src/parsing/: manager.rs  pjatk.rs  types.rs
src/parsing/pjatk/: aspemu.rs  deduct.rs
