[package]
name = "schedulebot"
version = "0.1.0"
edition = "2021"

[dependencies]
bson = { version = "2.13.0", features = ["chrono", "chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
eyre = { version = "0.6.12", features = ["track-caller"] }
failsafe = "1.3.0"
futures = "0.3.31"
log = "0.4.22"
mongodb = "3.1.0"
reqwest = { version = "0.12.8", features = ["brotli", "deflate", "gzip", "zstd"] }
rust-i18n = { version = "3.1.2", features = ["log-miss-tr"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
slog = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
slog-term = "2.9.1"
sloggers = "2.2.0"
strum = { version = "0.26.3", features = ["derive"] }
teloxide = "0.13.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
rust-i18n-cli = "3.1.1"

[package.metadata.i18n]
available-locales = ["en", "pl", "ukr", "ru"]
default-locale = "en"
load-path = "locales"
